Edit HTML to slime ID

--- a/source/google_analytics.html
+++ b/source/google_analytics.html
@@ -1,13 +1,13 @@
  <!-- Global site tag (gtag.js) - Google Analytics -->
- <script async src="https://www.googletagmanager.com/gtag/js?id=<%= SITE_CONFIG['google_analytics_script_id'] %>"></script>
+ <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127779891-1"></script>
  <script>
    window.dataLayer = window.dataLayer || [];
    function gtag(){dataLayer.push(arguments);}
    gtag('js', new Date());
 
-   gtag('config', '<%= SITE_CONFIG['google_analytics_script_id'] %>', {
+   gtag('config', 'UA-127779891-1', {
      'linker': {
-       'domains': ['admin.wifi.service.gov.uk', 'docs.wifi.service.gov.uk', 'wifi.service.gov.uk']
+       'domains': ['wifi.service.gov.uk','admin.wifi.service.gov.uk', 'docs.wifi.service.gov.uk']
      }
    });
  </script>
